google-serp-style.css
body {
	font-family: arial,sans-serif;
	font-size: small;
}
header {
	background-color: #f1f1f1;
	border-bottom: 1px solid #666;
    border-color: #e5e5e5;
	height: 70px;
	width: 100%;
	display: inline-block;
}
.header-left {
	float: left;
	margin-right: 15px;
}
.header-center {
	padding-top: 15px;
	float:left;
	position: relative;
}
.header-right {
	float: right;
	position: relative;
	padding-top: 5px;
	
}
.header-right li {
	display: inline-block;
	list-style-type: none;
}
.header-right li a {
	text-decoration: none;
	color: #3c3737;
	padding-left: 10px;
	padding-right: 10px;
}
.logo {
	height: 35px; 
	width: 100px;
	padding-top: 20px;
	padding-left: 5px;
}
form input {
	background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQFOR2Ei8BcbCeDV3GdY4S93JMM6cWAkRcO9WiRn7SXBTLqc-_A");
	background-repeat: no-repeat;
	background-position: right;
	background-size: 25px 25px;
	height: 35px;
	width: 600px;
	font-size: 15px;
}
form button {
	height: 40px;
	width: 40px;
	background-color: #4285f4;
	display: inline-block;
}
.magnify {
	height: 18px;
	width: 18px;
}
.url-row {
	display: inline-block;
}
.menu {
	border-bottom: 1px solid #ebebeb;
	padding-bottom: 50px;
	padding-left: 55px;
}
.menu li {
	display: inline-block;
	list-style-type: none;
	margin-left: 10px;
	padding-left: 20px;
}
.menu a {
	color: #777;
}
.menu li button {
	background-color: white;
	border: 0px;
	color: #777;
}
.menu li button:hover {
	background-color: #f8f8f8;
	border: 1px solid #c6c6c6;
	padding: 4px 8px;
}
.menu-left {
	float: left;
}
.menu-right {
	float: right;
}
.mn-dwn-arw {
	border-width: 5px 4px 0 4px !important;
    border-color: #909090 transparent;	
	border-style: solid;
	width: 0;
    height: 0;
    margin-left: -2px;
    top: 50%;
    margin-top: -2px;
    position: absolute;
	color: #777;
}
.group {
	float: left;
	margin: none;
	height: 30px;
	width: 45px;
}
.group img {
	height: 15px;
	width: 15px;
}
button {
	height: 30px;
	width: 60px;
	background-color: #eee;
	border: 1px solid #ccc;
}
button img {
	height: 20px;
	width: 20px;
}
.number-of-results {
	color: #808080;
	padding-left: 125px;
	padding-top: -10px;
	padding-bottom: 1px;
}
.ad {
	background-color: #59946b;
	color: #fff;
	font-size: 12px;
	padding-left: 1px;
	padding-right: 1px;
	border-radius: 3px;
}
.title {
	font-size: 18px;
}
a {
	text-decoration: none;
}
.map-pack img {
	height: 200px;
    width: 643px;
    border-top-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    border-left-width: 0px;
    border-top-style: solid;
    border-right-style: solid;
    border-bottom-style: solid;
    border-left-style: solid;
}
.add-url .phone {
	display: inline-block;
}
.adwords-list {
	list-style-type: none;
}
.adwords {
	padding-left: 90px;
}

